# geocal

./: .gitignore  COPYING  Makefile.am  Makefile.in  README  README.developer  README.git  README.md  README_RPM  README_centos7_build.md  aclocal.m4  afids-python-el5.spec  afids-python-noa.spec  afids-python.spec  afids_python.am  bootstrap  common.am  configure  configure.ac  configure.in  extra_anaconda_requirements.txt  geocal.am  geocal.pc.in  include.am  include_afids.am  include_nested.am  issues.csv  requirements.txt  requirements.txt.in
bindings/python/: __init__.py  create_swig_wrap.py  python.am  swig_wrap.tmpl
boost_fix/: README
config/: doc_footer.html  doxy2swig.py  doxygen.cfg  doxygen_single.cfg  valgrind.suppressions
config/m4/: ac_afids.m4  ac_afids_data.m4  ac_blitz.m4  ac_boost.m4  ac_carto.m4  ac_check_found.m4  ac_doxygen.m4  ac_enable_debug.m4  ac_expat.m4  ac_fftw.m4  ac_gdal.m4  ac_geos.m4  ac_gsl.m4  ac_handle_with_arg.m4  ac_hdf5.m4  ac_hdfeos5.m4  ac_msp.m4  ac_mspi_shared.m4  ac_ogdi.m4  ac_openjpeg.m4  ac_pkg_swig.m4  ac_python.m4  ac_python_module_with_version.m4  ac_python_nosetests.m4  ac_python_ogr.m4  ac_python_pytest.m4  ac_search_lib.m4  ac_spice.m4  ac_vicar_gdalplugin.m4  ac_vicar_rtl.m4  afids_common.m4  afids_python.m4  ax_cxx_compile_stdcxx.m4  geocal_source_directory.m4  swig_python.m4
config/m4_local/: geocal_source_directory.m4
doc/: LOC.txt  Nitf_file.xmi
env/: Makefile  pixi.toml
env/linux/: pixi.toml
env/osx/: pixi.toml
geocal/: AUTHORS  COPYING  INSTALL  README.developer  geocal.am
geocal/bindings/: all.i  all_with_b.i  bindings.am  doc.i  doc_python.i
geocal/lib/: array.i  common.i  dem_fit_tryout.cc  diff_rpc.cc  geocal.am  my_shared_ptr.i  quaternion.i  rpc_direct.cc  shared_ptr_list.i  swig.i  swig_array.i  swig_array_inc.i  swig_boost_array.i  swig_exception.i  swig_pickle.i  swig_python_attribute.i  swig_quaternion.i  swig_std.i  swig_to_python.h  swig_type_mapper.h  swig_type_mapper_base.h  test_all.cc  test_all.sh  tryout.cc  tryout2.cc  vector.i
geocal/python/: mmap_file.py  mmap_file_test.py  python.am  raster_tile.py
geocal/unit_test_data/: 06JAN06033849-P1BS-005545519120_01_P001.ATT  06JAN06033849-P1BS-005545519120_01_P001.IMD  PCF  Stereo  argus.csv  argus.ibis  dem_foot.tif  test_pixel_is_point.img  unit_test_data.am
isis-camera/: .gitignore  Makefile  README  isis_camera.cc
lib/: common.i  geocal_common.i  geocal_doxygen.h  geocal_shared_ptr.i  lib.am  serialize_function.i  swig_array.i  swig_array_inc.i  swig_boost_array.i  swig_boost_array_inc.i  swig_exception.i  swig_iostream.i  swig_iostream_inc.i  swig_pickle.i  swig_python_attribute.i  swig_quaternion.i  swig_to_python.h  swig_type_mapper.h  swig_type_mapper_base.h  test_all.cc  test_all.sh
lib/CartLab/: README  argus_camera.cc  argus_camera.h  argus_camera.i  argus_camera_test.cc  argus_orbit.cc  argus_orbit.h  argus_orbit.i  argus_orbit_test.cc  cart_lab.am  cart_lab_multifile.cc  cart_lab_multifile.h  cart_lab_multifile.i  copernicus_dem.cc  copernicus_dem.h  copernicus_dem.i  copernicus_dem_test.cc  datum_geoid96.cc  datum_geoid96.h  datum_geoid96.i  datum_geoid96_test.cc  doughnut_average.cc  doughnut_average.h  doughnut_average.i  doughnut_average_test.cc  ibis_file.cc  ibis_file.h  ibis_file.i  ibis_file_test.cc  landsat7_global.cc  landsat7_global.h  landsat7_global.i  landsat7_global_test.cc  landsat7_panchromatic.cc  landsat7_panchromatic.h  landsat7_panchromatic.i  landsat7_panchromatic_test.cc  material_detect.cc  material_detect.i  material_detect_test.cc  (+64 more)
lib/GeoCalCore/: README
lib/Msp/: igc_msp.cc  igc_msp.h  igc_msp_test.cc  msp.am  msp.cc  msp.h  msp.i
lib/Mspi/: air_mspi_file.cc  air_mspi_file.h  air_mspi_file.i  air_mspi_file_test.cc  air_mspi_igc.cc  air_mspi_igc.h  air_mspi_igc.i  air_mspi_igc_collection.cc  air_mspi_igc_collection.h  air_mspi_igc_collection.i  air_mspi_igc_collection_test.cc  air_mspi_igc_test.cc  air_mspi_l1b1.cc  air_mspi_l1b1.h  air_mspi_l1b1.i  air_mspi_l1b1_test.cc  air_mspi_orbit.cc  air_mspi_orbit.h  air_mspi_orbit.i  air_mspi_orbit_test.cc  air_mspi_time_table.cc  air_mspi_time_table.h  air_mspi_time_table.i  air_mspi_time_table_test.cc  filtering_fstream.h  ground_mspi_igc.cc  ground_mspi_igc.h  ground_mspi_igc.i  ground_mspi_igc_test.cc  ground_mspi_orbit.cc  ground_mspi_orbit.h  ground_mspi_orbit.i  ground_mspi_orbit_test.cc  ifstream_cs.cc  ifstream_cs.h  ifstream_cs_test.cc  mspi.am  mspi_camera.cc  mspi_camera.h  mspi_camera.i  (+21 more)
lib/Oco3/: jia_sample.cc  jia_sample.h  jia_sample.i  jia_sample_test.cc  oco3.am
lib/Serialize/: README  geocal_serialize.h  geocal_serialize_camera.h  geocal_serialize_common.h  serialize.am  (+4 more)
python/: .gitignore  MANIFEST.in  Makefile  README_pynitf.md  README_test  conftest.py  pytest.ini  python.am  setup.cfg  setup.py  test_all.sh
script/: NOTE_vicarb.txt  conda_wrapper.sh.in  csv_issues_to_github.rb  github_issues_to_csv.rb  script.am  setup_afids_env.csh.in  setup_afids_env.sh.in  setup_afids_python.csh.in  setup_afids_python.sh.in  setup_geocal.csh.in  setup_geocal.sh.in  vicarb.in
swig_rules/: README.md  create_python_init.py  doxygen_single.cfg  swig_rules.am
unit_test_data/: 06JAN06033849-P1BS-005545519120_01_P001.EPH  07JUN08184839-M1BS-005616921010_01_P001.IMD  07JUN08184839-P1BS-005616921010_01_P001.IMD  10MAY07185751-M1BS-052360785020_01_P001.IMD  11SLT_0455_00.TIF  2828r.img  3800r.img  418524_meta.txt  AIRMSPI_CONFIG_CAMERA_MODEL_0003.config  FRST_POIof090514.dbf  FRST_POIof090514.shp  GndMSPI_CONFIG_CAMERA_MODEL_V004.config  RPC_PHR1B_P_201307191703469_SEN_646065101-001.XML  Stereo  airmspi_orbit_file_test.hdf  cib_sample.img  ground_mspi_camera_test.config  igc_refraction_gfm.xml  image_coordinate_test.xml  mspi_camera_test.config2  mspi_config_file_test2.txt  mspi_config_file_test3.txt  mspi_config_file_test4.txt  mul.tif  pan.tif  poi.dbf  poi.shp  rpc.ntf  rpc.tif  rpc_example.pkl  rsm_ms_polynomial_np.xml  s251_sbet_subset.txt  sample_orbit.h5  steep_igc_gfm.xml  test_pixel_is_area.img  unit_test_data.am  vicar.img
(+2685 files in other folders)
